--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
     "workbench.colorCustomizations": {
-        "editorRuler.foreground": "#075c56",
-        "activityBar.background": "#006400",
-        "titleBar.activeBackground": "#008200",
-        "titleBar.activeForeground": "#ECFFEC"
+        "editorRuler.foreground": "#075c56"
     }
 }
